# Education_System_Using_UVPython_Neo4j

./: .envexample  README.md  pyproject.toml
app/: main.py
tests/: add_only_one_course.py  test2_one_node.py  test3_seprate_node.py  test4_all_models.py  test5_data_model.py  test6_class_model.py  test7_schema_node.py  test_check.py  test_main.py  test_update.py  update_course_program_issue.py
